# s3-download-comparison

aws-sdk-bench/: Cargo.toml
aws-sdk-bench/src/: main.rs
go-bench/: go.mod  go.sum  main.go
rusoto-bench/: .gitignore  Cargo.toml
rusoto-bench/src/: main.rs
rust-s3-bench/: Cargo.toml
rust-s3-bench/src/: main.rs
