[package]
name = "aws-sdk-bench"
version = "0.1.0"
authors = ["Roman Valls Guimera <brainstorm+rust-aws-benchmarking@nopcode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
jemallocator = "0.3.0"
url = "2.1.1"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
lambda_runtime = "0.3.0"
aws-sdk-s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.8-alpha" }
tracing-subscriber = "0.2.18"

tokio = { version = "1.4.0" }
structopt = "0.3"