[package]
name = "rusoto-bench"
version = "0.1.0"
authors = ["adamrk <ark.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
rusoto_core = "0.45"
rusoto_s3 = "0.45"
structopt = "0.3"