[package]
name = "rust-s3-bench"
version = "0.1.0"
authors = ["adamrk <ark.email@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-s3 = "0.26"
structopt = "0.3"
tokio = { version = "0.3", features = ["full"] }
